--- a/src/styles.css
+++ b/src/styles.css
@@ -1,18 +1,11 @@
-.logo.vite:hover {
-  filter: drop-shadow(0 0 2em #747bff);
-}
-
-.logo.typescript:hover {
-  filter: drop-shadow(0 0 2em #2d79c7);
-}
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
 
-  color: #0f0f0f;
-  background-color: #f6f6f6;
+  color: #f6f6f6;
+  background-color: #2f2f2f;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -37,13 +30,30 @@
   transition: 0.75s;
 }
 
-.logo.tauri:hover {
-  filter: drop-shadow(0 0 2em #24c8db);
-}
-
-.row {
+.submission-row {
   display: flex;
   justify-content: center;
+  gap: 0.3rem;
+  margin-top: 1rem;
+}
+
+.row-formats {
+    display: flex;
+    gap: 0.6rem;
+    justify-content: center;
+}
+
+#input-area {
+    margin-bottom: 5rem;
+}
+
+.format.selected {
+    background-color: #232495;
+}
+
+#error-msg {
+  color: #ff0000;
+  font-weight: 500;
 }
 
 a {
@@ -61,6 +71,7 @@ h1 {
 }
 
 input,
+textarea,
 button {
   border-radius: 8px;
   border: 1px solid transparent;
@@ -68,8 +79,8 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  color: #0f0f0f;
-  background-color: #ffffff;
+  color: #ffffff;
+  background-color: #0f0f0f98;
   transition: border-color 0.25s;
   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
 }
@@ -83,7 +94,7 @@ button:hover {
 }
 button:active {
   border-color: #396cd8;
-  background-color: #e8e8e8;
+  background-color: #0f0f0f69;
 }
 
 input,
@@ -91,26 +102,11 @@ button {
   outline: none;
 }
 
-#greet-input {
-  margin-right: 5px;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    color: #f6f6f6;
-    background-color: #2f2f2f;
-  }
-
-  a:hover {
-    color: #24c8db;
-  }
-
-  input,
-  button {
-    color: #ffffff;
-    background-color: #0f0f0f98;
-  }
-  button:active {
-    background-color: #0f0f0f69;
-  }
+textarea {
+    resize: none;
+    border: none;
+    font-family: monospace;
+    padding: 15px 20px;
+    width: 30rem;
+    height: 10rem;
 }
